--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -1,9 +1,8 @@
 <!--
-파일명 : order/list
+파일명 : order/detail
 작성자 : 정아름
-작성일 : 24.02.21
-수정사항 : 글씨체 적용
-          장바구니 화면에 표시할 내역들 다시 확인하기.
+작성일 : 24.04.12
+수정사항 :
 -->
 <!DOCTYPE html>
 <html lang="ko"
