--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -3,8 +3,7 @@
     파일명 : board/list
     작성자 : 정아름
     작성일 : 24.02.22
-    수정사항 : 비밀글 체크 및 비밀번호 확인 되는지 확인 필.
-              모달로 비밀번호 받을 수 있는지 확인. 페이지를 따로 만들어서 전송해야 하는지.
+    수정사항 :
 -->
 <!DOCTYPE html>
 <html lang="ko"
