--- a/src/main/resources/templates/board/update.html
+++ b/src/main/resources/templates/board/update.html
@@ -4,7 +4,7 @@
     작성자 : 정아름
     작성일 : 24.02.22
     수정사항 : 글씨체 적용함
-              틀 수정해야 함, 배경 및 이미지, 아이콘 등 확인!
+              틀 수정, 배경 및 이미지, 아이콘 등 확인!
 -->
 <!DOCTYPE html>
 <html lang="ko"
